# OpenContractTypes

./: LICENSE  README.rst  pyproject.toml
opencontracttypes/: __init__.py  types.py
tests/: test_opencontracttypes.py
