[tool.poetry]
name = "OpenContractTypes"
version = "0.1.0"
license = "MIT"
description = "Python typing types for OpenContracts and related applications. Part of OpenSource.legal's Legal Engineering Dev Tools."
authors = ["John Scrudato IV"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
